--- a/Labs/Lab1/index.html
+++ b/Labs/Lab1/index.html
@@ -13,9 +13,14 @@ in html
 <!-- All styles and javascript go inside the head -->
     <head>
         <title> Eric Ybarra: Personal Website </title>   
-        <meta char = "utf-8" />
+        <meta charset = "utf-8" />
         <link href= "css/styles.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+        <style>
+            body{
+                text-align:center;
+            }
+        </style>
     </head>
 <!-- closing head -->
 
@@ -26,7 +31,7 @@ in html
             <h1> Eric Ybarra </h1>
         </header>
         <nav>
-            <hr width = "50%" />
+            <hr style = "width:50%"/>
             <a class = "active" href = "index.html" > Home </a>
             <a href = "about.html" > About </a>
             <a href = "contact.html" > Contact </a>
