--- a/Labs/Lab1/contact.html
+++ b/Labs/Lab1/contact.html
@@ -16,11 +16,6 @@ in html
         <meta charset = "utf-8" />
         <link href= "css/styles.css" rel="stylesheet" type="text/css" />
         <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
-        <style>
-            body{
-                text-align:center;
-            }
-        </style>
     </head>
 <!-- closing head -->
 
@@ -40,8 +35,8 @@ in html
         <br /><br />
         
         <!-- div with an id call content -->
-        <div id = "contactForm">
-            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeXDDHi5JyjnSG7sOy3mjTn5zON54fmtYPas9e4o75_r_GA3A/viewform?embedded=true" width="100%" height="1013" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>"
+        <div class = "contactPage">
+            <iframe class = "contentIframe"src="https://docs.google.com/forms/d/e/1FAIpQLSeXDDHi5JyjnSG7sOy3mjTn5zON54fmtYPas9e4o75_r_GA3A/viewform?embedded=true"></iframe>
         </div>
         
         <!-- This is the footer -->
