added revised lab1 files

--- a/Labs/Lab1/contact.html
+++ b/Labs/Lab1/contact.html
@@ -27,9 +27,9 @@ in html
         </header>
         <nav>
             <hr style = "width:50%"/>
-            <a class = "active" href = "index.html" > Home </a>
+            <a href = "index.html" > Home </a>
             <a href = "about.html" > About </a>
-            <a href = "contact.html" > Contact </a>
+            <a class = "active" href = "contact.html" > Contact </a>
         </nav>
         
         <br /><br />
