--- a/Labs/Lab1/about.html
+++ b/Labs/Lab1/about.html
@@ -27,8 +27,8 @@ in html
         </header>
         <nav>
             <hr style = "width:50%"/>
-            <a class = "active" href = "index.html" > Home </a>
-            <a href = "about.html" > About </a>
+            <a href = "index.html" > Home </a>
+            <a class = "active" href = "about.html" > About </a>
             <a href = "contact.html" > Contact </a>
         </nav>
         
@@ -43,12 +43,16 @@ in html
                     <td><strong>Years Experience</strong></td>
                 </tr>
                 <tr class = "table-row">
-                    <td>Java</td>
+                    <td>C++</td>
                     <td>3</td>
                 </tr>
                 <tr class = "table-row">
-                    <td>C++</td>
-                    <td>2</td>
+                    <td>Java</td>
+                    <td>1</td>
+                </tr>
+                <tr class = "table-row">
+                    <td>Python</td>
+                    <td>1</td>
                 </tr>
                 <tr class = "table-row">
                     <td>PHP</td>
