Added revised lab7 files

--- a/Labs/Lab7/index.html
+++ b/Labs/Lab7/index.html
@@ -20,6 +20,9 @@
             </header>
             
             <div id="word"></div>
+            <div id = "wordHint">
+                <button  class = "hintBtn btn btn-success">Click for hint</button>
+            </div>
             <div id="letters"></div>
             
             <div id="man">
